arches/app/media/css/arches-nifty.css
@import url(//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=latin);
@import url(//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css);
@import url(//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker.min.css);
@import url(nifty.min.css);
@import url(//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css);
@import url(//cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css);
@import url(../plugins/themify-icons/themify-icons.min.css);
@import url(../plugins/chosen.min.css);
@import url(//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2.min.css);
@import url(//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2-bootstrap.min.css);
@import url(//cdnjs.cloudflare.com/ajax/libs/summernote/0.8.2/summernote.css);
@import url(//api.mapbox.com/mapbox-gl-js/v0.25.1/mapbox-gl.css);

.navbar-top-links:last-child>li {
    border-right: 1px solid rgba(0,0,0,0.07);
}

.navbar-header{
    height: 50px;
}

.brand-icon {
    height: 20px !important; 
    width: 20px !important;
    margin-top: 14px !important;
    margin-left: 15px !important;
    margin-right: 15px !important;
}

.brand-title{
    display: block;
    line-height: 48px;
}

#mainnav-container{
    padding-top: 50px;
    background-color: #2d3c4b;
}

.list-group.bg-trans .list-group-item:not(.active):not(.disabled) {
    border-bottom: 1px solid #eee;
    background-color: rgba(0, 0, 0, 0.05);
}
.list-group.bg-trans a.list-group-item:hover:(.active) {
    background-color: #fff;
}
.list-group-item.active {
    background-color: #fff;
    border-bottom: 1px solid #eee;
    border-top: 1px solid #eee;
    color: #5f5f5f;
    border-width: 0;
}
.summary-divider {
    margin-left: 50px;
    margin-right: 50px;
}
.panel hr {
    border-color: rgba(0, 0, 0, 0.075);
}
.switchery {
    background-color: #fff;
    border: 1px solid #dfdfdf;
    border-radius: 20px;
    cursor: pointer;
    display: inline-block;
    height: 30px;
    position: relative;
    vertical-align: middle;
    width: 50px;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
    box-sizing: content-box;
    background-clip: content-box;
}
.card-main-title {
    font-size: 16px;
    font-weight: 500;
}
.card-panel {
    margin-bottom: 20px;
    border: 1px solid #ddd;
    border-bottom-width: 0;
}
.card-body {
    padding: 0 20px 0 20px;
}
.card-content-container {
    border: 0 solid #eee;
    position: relative;
    margin: -2px 0 18px 0px;
}
.outline {
    border: 1px solid #eee;
}
.card-nav-container {
    background: #f4f4f4;
    margin-left: 0;
    margin-bottom: 5px;
}
.card-content-tab {
    min-height: 350px;
    margin-top: 15px;
    margin-left: -15px;
    box-shadow: none;
    padding: 5px 0 0;
}
.card-panel-body {
    background-color: #FFF;
    padding-top: 15px;
    padding-bottom: 10px;
    margin-top: 10px;
}
.card-instructions {
    color: #888;
    margin-bottom: 5px;
}
.card-content {
    margin: -20px -35px 20px -20px;
    padding: 0;
}
.card-tab-title {
    font-size: 14px;
}
.sub-title {
    font-weight: 600;
}
.data-card-alert {
    margin-bottom: 5px;
    margin-top: 5px;
}
.card-footer {
    border-top: 1px solid #eef0f2;
    margin: 0;
    padding: 20px 0 20px 25px;
}
.card-help {
    padding-right: 20px;
    font-size: 13px;
    margin-top: -3px;
}
.card-form-container {
    padding-bottom: 10px;
    padding-right: 20px;
}
.card-help-panel {
    width: 40%;
    max-width: 275px;
    min-width: 250px;
    padding-top: 0;
    top: 0px;
    position: absolute;
    bottom: 0px;
    right: -20px;
    background: #37495b;
    opacity: .9;
    z-index: 500;
    overflow-y: scroll;
    color: #fff;
}
.card-checkbox {
    height: 1.25em;
    width: 1.25em;
}
input[type="checkbox"] {
    width: 30px;
    height: 30px;
}
.wizard-data-card-alert {
    box-shadow: none;
    margin: 1px 0 0;
}
.content-instructions {
    font-size: 13px;
    color: #8d8d8d;
    margin-top: -50px;
    line-height: 1.25;
    margin-bottom: 20px;
}
.record-delete {
    position: absolute;
    font-size: 10px;
    top: 5px;
    right: 45px;
    height: 20px;
    width: 20px;
    margin-right: 10px;
}
.record-close {
    position: absolute;
    font-size: 10px;
    top: 5px;
    right: px;
    height: 20px;
    width: 20px;
    margin-right: 10px;
}
.wizard-buttons {
    direction: rtl;
    padding: 5px 0 10px 10px;
}
.summary-panel {
    background: #f9f9f9;
    margin-top: -30px;
}
#map-settings {
    position: relative;
    margin: -40px -35px 10px -20px;
}
.help-close {
    color: #ddd;
    position: absolute;
    right: 10px;
    top: 20px;
    z-index: 600;
}
.scroll-shim {
    height: 1px;
    color: #fff;
    font-size: 1px;
    margin-bottom: 25px;
}
.scroll-y {
    height: 100vh;
    overflow-y: scroll;
}
.scroll-y-hidden {
    overflow-y: hidden;
}
.tab-base .nav-tabs>li:not(.active)>a:hover {
    border-top: 1px solid #eee;
    border-right: 1px solid #eee;
    border-left: 1px solid #eee;
    border-bottom: 1px solid #fff;
    background: #eee;
}
.tab-base .tab-content {
    box-shadow: none;
    padding-bottom: 0;
    margin: 0;
}
.panel .panel-heading, .panel>:first-child {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}
.ol-control button {
    height: 1.9em;
    width: 1.9em;
    font-size: 1.3em;
}
.form-text.form-checkbox:not(.btn), .form-text.form-radio:not(.btn) {
    padding-right: 25px;
    padding-top: 5px;
    padding-left: 22px;
}
span.icon-wrap.icon-circle.bg-gray-dark:hover {
    background: #94A6BC;
    color: #123;
}
.widget-input-group {
    margin-bottom: 15px;
    padding: 0 0 15px;
}
.widget-input-label {
    font-size: 12px;
    margin-top: 2px;
    font-weight: 600;
    color: #666;
}
.widget-input {
    border-radius: 2px;
}
.card-wz-grid {
    padding-top: 0;
    margin-top: -10px;
}
/* ... */

